@@ -84,4 +84,12 @@ defined('TYPO3') or die();
         \Tpwd\KeSearch\Routing\Aspect\KeSearchUrlEncodeMapper::class;
     $GLOBALS['TYPO3_CONF_VARS']['SYS']['routing']['aspects']['KeSearchTagToSlugMapper'] =
         \Tpwd\KeSearch\Routing\Aspect\KeSearchTagToSlugMapper::class;
+
+    // Exclude ke_search parameters from cacheHash calculation
+    foreach (\Tpwd\KeSearch\Lib\SearchHelper::PI_VARS as $piVar) {
+        $GLOBALS['TYPO3_CONF_VARS']['FE']['cacheHash']['excludedParameters'] = array_merge(
+            $GLOBALS['TYPO3_CONF_VARS']['FE']['cacheHash']['excludedParameters'],
+            ['tx_kesearch_pi1[' . $piVar . ']']
+        );
+    }
 })();
